<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             tools:context="pl.tpolgrabia.urbanexplorer.fragments.HomeFragment">

    <TextView
            android:id="@+id/locationInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_info"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/location_xrange"/>

        <EditText android:id="@+id/location_xrange"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:layout_weight="1"
                  android:text="0.05"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/location_yrange"/>

        <EditText android:id="@+id/location_yrange"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="numberDecimal"
                  android:layout_weight="1"
                  android:text="0.05"/>

    </LinearLayout>

    <ListView
            android:id="@+id/locations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

    </ListView>

    <TextView android:id="@+id/locations_result_info"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"/>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:gravity="center">
        <ImageView android:id="@+id/prev"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/nav_left"/>

        <EditText
                android:id="@+id/locations_page_id"
                android:layout_width="40dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="1"/>

        <EditText
                android:id="@+id/locations_page_size"
                android:layout_width="40dp"
                android:gravity="center"
                android:layout_height="match_parent"
                android:text="10"/>

        <ImageView android:id="@+id/next"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/nav_right"/>
    </LinearLayout>

    <Button android:id="@+id/update_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Fetch interesting places" />

</LinearLayout>
